--- a/src/controller/menu/dashboard.fxml
+++ b/src/controller/menu/dashboard.fxml
@@ -26,7 +26,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.menu.Controller">
   <children>
       <AnchorPane prefHeight="61.0" prefWidth="1280.0" style="-fx-background-color: #666666;">
          <children>
@@ -113,12 +113,12 @@
                         </HBox>
                         <HBox prefHeight="57.0" prefWidth="300.0">
                            <children>
-                              <Button fx:id="btnInserir" mnemonicParsing="false" prefHeight="29.0" prefWidth="116.0" text="INSERIR">
+                              <Button fx:id="btnInserir" mnemonicParsing="false" onAction="#btnInserir" prefHeight="29.0" prefWidth="116.0" text="INSERIR">
                                  <HBox.margin>
                                     <Insets right="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button fx:id="btnCarregar" mnemonicParsing="false" prefHeight="29.0" prefWidth="134.0" text="CARREGAR">
+                              <Button fx:id="btnCarregar" mnemonicParsing="false" onAction="#btnCarregar" prefHeight="29.0" prefWidth="134.0" text="CARREGAR">
                                  <HBox.margin>
                                     <Insets left="10.0" />
                                  </HBox.margin>
@@ -345,9 +345,9 @@
                                         <TableColumn minWidth="4.0" prefWidth="159.0" text="Resultado" />
                                       </columns>
                                     </TableView>
-                                    <TableView prefHeight="100.0" prefWidth="573.0">
+                                    <TableView fx:id="tableAmostra" prefHeight="100.0" prefWidth="573.0">
                                        <columns>
-                                          <TableColumn fx:id="tableAmostra" prefWidth="572.0" text="Amostra" />
+                                          <TableColumn fx:id="colunaDados" prefWidth="572.0" text="Amostra" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="50.0" />
