Tabela Resultados, Classe resultadoTabela, Alterações na Tela e Integrações no Controller
- Tabela de Resultados (Funcionalidade, Resultado)
- Checkbox funcionando e ativo, ainda faltam algumas correções em algumas funcionalidades.
- Pequenas personalizações na interface.

--- a/src/controller/menu/dashboard.fxml
+++ b/src/controller/menu/dashboard.fxml
@@ -330,10 +330,10 @@
                               </Label>
                               <BarChart fx:id="graficoDeBarras">
                                 <xAxis>
-                                  <CategoryAxis side="BOTTOM" />
+                                  <CategoryAxis fx:id="BarChartCategoryAxis" side="BOTTOM" />
                                 </xAxis>
                                 <yAxis>
-                                  <NumberAxis side="LEFT" />
+                                  <NumberAxis fx:id="BarChartNumberAxis" side="LEFT" />
                                 </yAxis>
                                  <padding>
                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
